--- a/config.json
+++ b/config.json
@@ -2,6 +2,9 @@
     
     "wrongCommand" : "La commande n'existe pas ou n'est pas correctement orthographié",
     "missingArguments" : "Il manque un ou plusieurs arguments après la commande",
-    "missingMentions" : "Vous avez oublier de mentionner quelqu'un après la commande"
+    "missingMentions" : "Vous avez oublier de mentionner quelqu'un après la commande",
+    "catchedError" : "Erreur de sauvegarde du message",
+    "missingRights" : "Vous n'avez pas les droits pour utiliser cette commande",
+    "guildUnavailable" : "Le serveur discord n'est pas accessible pour le moment"
 
 }
