--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0",
     "node-opus": "^0.3.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "winston": "^3.2.1"
   }
-  
 }
