--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A wonderful discord bot with many functionalities (risitas...)",
   "main": "bot.js",
   "scripts": {
+    "start": "node bot.js",
     "test": "mocha"
   },
   "repository": {
