--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A wonderful discord bot with many functionalities (risitas...)",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    "test": "mocha"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
