--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js"
+    "start": "node bot.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "dotenv": "^6.2.0",
+    "mocha": "^6.2.1",
     "node-opus": "^0.2.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
