--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.15.1]
 
     steps:
     - uses: actions/checkout@v1
