--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "dotenv": "^6.2.0",
+    "http-status-codes": "^1.3.2",
     "mocha": "^6.2.1",
     "node-opus": "^0.2.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "url-status-code": "^1.1.1",
     "winston": "^3.2.1"
   }
 }
