--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "homepage": "https://github.com/ACayet/NinjaBot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.3.2",
     "discord.js": "^11.6.3",
     "dotenv": "^6.2.0",
     "http-status-codes": "^1.4.0",
     "mocha": "^7.1.1",
-    "node-opus": "^0.2.7",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "url-status-code": "^1.1.1",
