migrated from v10 to v13 of discord js library

--- a/config.json
+++ b/config.json
@@ -1,10 +1,8 @@
 {
-    
-    "wrongCommand" : "La commande n'existe pas ou n'est pas correctement orthographié",
-    "missingArguments" : "Il manque un ou plusieurs arguments après la commande",
-    "missingMentions" : "Vous avez oublier de mentionner quelqu'un après la commande",
-    "catchedError" : "Erreur de sauvegarde du message",
-    "missingRights" : "Vous n'avez pas les droits pour utiliser cette commande",
-    "guildUnavailable" : "Le serveur discord n'est pas accessible pour le moment"
-
+	"missingArguments" : "Il manque un ou plusieurs arguments après la commande",
+	"missingMentions" : "Vous avez oublier de mentionner quelqu'un après la commande",
+	"catchedError" : "Erreur de sauvegarde du message",
+	"missingRights" : "Vous n'avez pas les droits pour utiliser cette commande",
+	"guildUnavailable" : "Le serveur discord n'est pas accessible pour le moment",
+	"eventHandlingFailed" : "Impossible de traiter la commande pour le moment"
 }
